--- a/assets/css/style1.css
+++ b/assets/css/style1.css
@@ -6,24 +6,22 @@ body{
     padding: 0;
     font-family: sans-serif;
     background-image: linear-gradient(rgba(1, 27, 2, 0.5), rgba(7, 172, 43, 0.5)),
-    url("../../FoodBox/assets/img/favicon-foodbox.png");
-    background-size: 50ch;            
+    url("../../assets/img/FoodinBox.png");
+    background-size: 24ex;            
 }
 .text{
     position: absolute;
     top: 50%;
     left: 50%;
-    width: 400px;
-    padding: 100px;
+    width: 450px;
+    padding: 90px;
     transform: translate(-50%, -50%);
-    background: linear-gradient(#037608, #036803);
+    background: linear-gradient(#036a08, #028A08);
     box-sizing: border-box;
-    box-shadow: 0 15px 25px rgba(0,0,0,6);
-    border-radius: 15px;
+    box-shadow: 0 15px 20px rgba(0,0,0,1);
+    border-radius: 10px;
 }
-.text h2 p{
-    margin: 0 0 30px;
-    padding: 30px;
+.text h1 p{
     color: black;
-    
+    margin-bottom: 10vh;
 }
